Fixed UI bug on the problems page on mobile

--- a/resources/problem.sass
+++ b/resources/problem.sass
@@ -1,4 +1,5 @@
 #problem-table
+  max-width: 100%
   td
     &.category
       text-align: left
