--- a/resources/widgets.sass
+++ b/resources/widgets.sass
@@ -187,6 +187,7 @@ ul.pagination a:hover
   background: rgba(0, 0, 0, 0.55)
 
 ul.pagination
+  max-width: 90%
   display: flex
   padding-left: 0px
   margin: 0
